coreccion id x class, quitar min-height, sacar br

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,83 +19,85 @@
 </head>
 
 <body>
+    <div class="containerTemplate">
+        <header>
+            <nav class="navbar navbar-expand-md ">
+                <div class="container">
+                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                            class="logo animate__animated animate__heartBeat"></a>
+                    <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-    <header>
-        <nav class="navbar navbar-expand-md ">
-            <div class="container">
-                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
-                        class="logo animate__animated animate__heartBeat"></a>
-                <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
 
-                <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
+                        <ul class="navbar-nav mb-2 mb-lg-2">
 
-                    <ul class="navbar-nav mb-2 mb-lg-2">
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="../index.html">HOME</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="./tour.html">TOUR</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="./videos.html">VIDEOS</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="./music.html">MUSIC</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar active" aria-current="page" href="./contact.html">CONTACT</a>
+                            </li>
 
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="../index.html">HOME</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="./tour.html">TOUR</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="./videos.html">VIDEOS</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="./music.html">MUSIC</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar active" aria-current="page" href="./contact.html">CONTACT</a>
-                        </li>
+                        </ul>
 
-                    </ul>
-
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
-    </header>
+            </nav>
+            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
+        </header>
 
-    <main>
-        <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="sobre"></h1>
-        <section class="contact-background">
-            <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
+        <main>
+            <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="sobre"></h1>
+            <section class="contact-background">
+                <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
 
-            <form action="/submit" method="post"  data-aos="fade-up" data-aos-duration="2000">
-                <label for="nombre">Nombre</label>
-                <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre" required>
+                <form action="/submit" method="post" data-aos="fade-up" data-aos-duration="2000">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre" required>
 
-                <label for="nombre">Apellido</label>
-                <input type="text" id="apellido" name="apellido" placeholder="Escribe aquí tu apellido" required>
+                    <label for="nombre">Apellido</label>
+                    <input type="text" id="apellido" name="apellido" placeholder="Escribe aquí tu apellido" required>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Dejanos tu email aquí" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Dejanos tu email aquí" required>
 
-                <label for="mensaje">Mensaje</label>
-                <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje"
-                    required></textarea>
+                    <label for="mensaje">Mensaje</label>
+                    <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje"
+                        required></textarea>
 
-                <button class="boton" type="submit">Enviar</button>
-            </form>
-        </section>
-    </main>
+                    <button class="boton" type="submit">Enviar</button>
+                </form>
+            </section>
+        </main>
 
-    <footer>
-        <p>Todos los derechos reservados a Keane© 2025 <br> Diseño Web por Tam S. C.</p>
-        <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
-                src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
-        <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
-                src="../assets/icons/spotify.png" alt="Icono Spotify"></a>
-        <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes" src="../assets/icons/instagram.png"
-                alt="Icono Instagram"></a>
-        <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
-                alt="Icono X - Twitter"></a>
-        <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
-    </footer>
+        <footer>
+            <p>Todos los derechos reservados a Keane© 2025</p>
+            <p>Diseño Web por Tam S. C.</p>
+            <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
+                    src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
+            <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
+                    src="../assets/icons/spotify.png" alt="Icono Spotify"></a>
+            <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes"
+                    src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
+                    alt="Icono X - Twitter"></a>
+            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
+        </footer>
 
+    </div>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
