--- a/pages/videos.html
+++ b/pages/videos.html
@@ -20,129 +20,138 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-md ">
-            <div class="container">
-                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
-                        class="logo animate__animated animate__heartBeat"></a>
-                <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <div class="containerTemplate">
 
-                <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
+        <header>
+            <nav class="navbar navbar-expand-md ">
+                <div class="container">
+                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                            class="logo animate__animated animate__heartBeat"></a>
+                    <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                    <ul class="navbar-nav mb-2 mb-lg-2">
+                    <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
 
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="../index.html">HOME</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="./tour.html">TOUR</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar active" aria-current="page" href="./videos.html">VIDEOS</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="./music.html">MUSIC</a>
-                        </li>
-                        <li class="listaNavbar">
-                            <a class="botonNavBar" href="./contact.html">CONTACT</a>
-                        </li>
+                        <ul class="navbar-nav mb-2 mb-lg-2">
 
-                    </ul>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="../index.html">HOME</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="./tour.html">TOUR</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar active" aria-current="page" href="./videos.html">VIDEOS</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="./music.html">MUSIC</a>
+                            </li>
+                            <li class="listaNavbar">
+                                <a class="botonNavBar" href="./contact.html">CONTACT</a>
+                            </li>
 
+                        </ul>
+
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
-    </header>
+            </nav>
+            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
+        </header>
 
-    <main>
-        <h1>VIDEOS <img class="vhs" src="../assets/img/vhs.png" alt="vhs"></h1>
-        <section>
-            <h2>VideoClips ordenados por álbum y año de lanzamiento</h2>
+        <main>
+            <h1>VIDEOS <img class="vhs" src="../assets/img/vhs.png" alt="vhs"></h1>
+            <section>
+                <h2>VideoClips ordenados por álbum y año de lanzamiento</h2>
 
 
-            <article>
-                <h3>Hopes & Fears - 2004</h3>
-                <div id="carouselExampleCaptions1" class="carousel slide">
-                    <div class="carousel-indicators indicadores">
-                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0"
-                            class="active" aria-current="true"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2"></button>
+                <article>
+                    <h3>Hopes & Fears - 2004</h3>
+                    <div id="carouselExampleCaptions1" class="carousel slide">
+                        <div class="carousel-indicators indicadores">
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0"
+                                class="active" aria-current="true"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions1"
+                                data-bs-slide-to="1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions1"
+                                data-bs-slide-to="2"></button>
+                        </div>
+                        <div class="carousel-inner musicItem">
+                            <div class="carousel-item active">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/q0Gg532j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-item">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/LZuQW32j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-item">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/n6Ty532j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev arrow" type="button"
+                            data-bs-target="#carouselExampleCaptions1" data-bs-slide="prev">
+                            < </button>
+                                <button class="carousel-control-next arrow" type="button"
+                                    data-bs-target="#carouselExampleCaptions1" data-bs-slide="next"> > </button>
                     </div>
-                    <div class="carousel-inner musicItem">
-                        <div class="carousel-item active">
-                            <iframe class="videoEdit" src="https://mover.uz/video/embed/q0Gg532j" frameborder="0"
-                                allowfullscreen></iframe>
+                </article>
+
+
+                <article>
+                    <h3>Under The Iron Sea - 2006</h3>
+                    <div id="carouselExampleCaptions2" class="carousel slide">
+                        <div class="carousel-indicators indicadores">
+                            <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0"
+                                class="active" aria-current="true"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions2"
+                                data-bs-slide-to="1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions2"
+                                data-bs-slide-to="2"></button>
                         </div>
-                        <div class="carousel-item">
-                            <iframe class="videoEdit" src="https://mover.uz/video/embed/LZuQW32j" frameborder="0"
-                                allowfullscreen></iframe>
+                        <div class="carousel-inner musicItem">
+                            <div class="carousel-item active">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/o0tE532j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-item">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/0wki532j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-item">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/i0Xqu32j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <iframe class="videoEdit" src="https://mover.uz/video/embed/n6Ty532j" frameborder="0"
-                                allowfullscreen></iframe>
-                        </div>
+                        <button class="carousel-control-prev arrow" type="button"
+                            data-bs-target="#carouselExampleCaptions2" data-bs-slide="prev">
+                            < </button>
+                                <button class="carousel-control-next arrow" type="button"
+                                    data-bs-target="#carouselExampleCaptions2" data-bs-slide="next"> > </button>
                     </div>
-                    <button class="carousel-control-prev arrow" type="button" data-bs-target="#carouselExampleCaptions1"
-                        data-bs-slide="prev">
-                        < </button>
-                            <button class="carousel-control-next arrow" type="button"
-                                data-bs-target="#carouselExampleCaptions1" data-bs-slide="next"> > </button>
-                </div>
-            </article>
+                </article>
 
+            </section>
+        </main>
 
-            <article>
-                <h3>Under The Iron Sea - 2006</h3>
-                <div id="carouselExampleCaptions2" class="carousel slide">
-                    <div class="carousel-indicators indicadores">
-                        <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0"
-                            class="active" aria-current="true"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="2"></button>
-                    </div>
-                    <div class="carousel-inner musicItem">
-                        <div class="carousel-item active">
-                            <iframe class="videoEdit" src="https://mover.uz/video/embed/o0tE532j" frameborder="0"
-                                allowfullscreen></iframe>
-                        </div>
-                        <div class="carousel-item">
-                            <iframe class="videoEdit" src="https://mover.uz/video/embed/0wki532j" frameborder="0"
-                                allowfullscreen></iframe>
-                        </div>
-                        <div class="carousel-item">
-                            <iframe class="videoEdit" src="https://mover.uz/video/embed/i0Xqu32j" frameborder="0"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev arrow" type="button" data-bs-target="#carouselExampleCaptions2"
-                        data-bs-slide="prev">
-                        < </button>
-                            <button class="carousel-control-next arrow" type="button"
-                                data-bs-target="#carouselExampleCaptions2" data-bs-slide="next"> > </button>
-                </div>
-            </article>
+        <footer>
+            <p>Todos los derechos reservados a Keane© 2025</p>
+            <p>Diseño Web por Tam S. C.</p>
+            <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
+                    src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
+            <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
+                    src="../assets/icons/spotify.png" alt="Icono Spotify"></a>
+            <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes"
+                    src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
+                    alt="Icono X - Twitter"></a>
+            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
+        </footer>
 
-        </section>
-    </main>
-
-    <footer>
-        <p>Todos los derechos reservados a Keane© 2025 <br> Diseño Web por Tam S. C.</p>
-        <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
-                src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
-        <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
-                src="../assets/icons/spotify.png" alt="Icono Spotify"></a>
-        <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes" src="../assets/icons/instagram.png"
-                alt="Icono Instagram"></a>
-        <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
-                alt="Icono X - Twitter"></a>
-        <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
-    </footer>
+    </div>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
