sumando imagenes a Tours

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -150,30 +150,44 @@
                                         </ul>
 
                                         <ul class="ulTour" data-aos="fade-up" data-aos-duration="2000">
-                                                <h3>2022</h3>
-                                                <li class="listaTour">21 Oct - Lima, Peru -> <a class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a></li>
-                                                <li class="listaTour">19 Oct - Santiago, Chile -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">16 Oct - Asuncion, Paraguay -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">14 Oct - Bs. As., Argentina -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">12 Oct - Montevideo, Uruguay -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
+                                                <h3>2019</h3>
+                                                <div class="contenedorListaIMG">
+                                                        <div>
+                                                                <li class="listaTour">29 Nov. - Bs.As, Argentina -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a></li>
+                                                                <li class="listaTour">27 Nov. - Asunción, Paraguay -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">24 Nov. - Santiago, Chile -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">22 Nov. - Lima, Perú -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">20 Nov. - Bogotá, Colombia -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">17 Nov. - Mex-City, México -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                        </div>
+                                                        <figure>
+                                                                <img class="fotosTour" src="../assets/img/keane-tour-2019.jpg"
+                                                                        alt="Foto del tour de Keane 2019 por Latinoamérica">
+                                                        </figure>
+
                                         </ul>
 
                                 </article>
